# CyberSquad

./: .gitignore  CMakeLists.txt  README.md  data.cpp  data.h  logic.cpp  logic.h  main.cpp  presentation.cpp  presentation.h
documentation/: GradeBook-Documentation.docx  GradeBook-Presentation.pptx
